# google-scholar-query

./: Cargo.toml  README.md
src/: lib.rs
src/scholar/: args.rs  client.rs  error.rs  mod.rs  result.rs  scholar.rs
