[package]
name = "google-scholar-query"
version = "0.1.5"
edition = "2018"
authors = ["L04DB4L4NC3R <angadsharma1016@gmail.com>", "Julien-cpsn"]
description = "The unofficial Google Scholar API"
repository = "https://github.com/Julien-cpsn/google-scholar-query"
homepage = "https://github.com/Julien-cpsn/google-scholar-query"
readme = "README.md"
license-file = "LICENSE"
keywords = ["google", "scholar", "api", "research", "books"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.12", default-features = false, features = ["json", "charset", "rustls-tls-native-roots"] }
tokio = { version = "1", default-features = false }
scraper = { version = "0.22.0", default-features = false }
select = { version = "0.6.0", default-features = false }
async-trait = { version = "0.1.86", default-features = false }
regex = "1.11.1"

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["macros"] }
